@@ -3754,3 +3754,4 @@ Changelog for GXemul:
 20081126	Continuing on the Iyonix mode: connecting initial i80321
 		interrupts, and importing NetBSD/iyonix' bootconfig.h.
 20081127	Importing iopi2creg.h from NetBSD (ARM Xscale I2C registers).
+		Implementing the SH4 fsrra instruction, 1/sqrt(x).
